[tool.poetry]
name = "monitor-rosa-library"
version = "0.1.0"
description = "Library to help collecting/transforming SUS files and creating deltalake tableas from it."
authors = ["Heber Scachetti <heber.augusto@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/heber-augusto/monitor-rosa-library"
repository = "https://github.com/heber-augusto/monitor-rosa-library"
include = [
    "LICENSE.md",
]

[tool.poetry_bumpversion.file."src/monitor_rosa_library/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"